project/test/semantics/unit/good/Good12_shouldPassArgsToMethod.ty
immutable class SomeDummyInstantiableClass {
    
    values: {
        someDummyAttribute: Int = 3;
        anotherDummyAttribute: Int;
    }
    
    functions: {
        differenceShifted: (x: Int, y: Int) -> Int = {
            shift + (y - x)
        } with values: {
            shift: Int = 10;
        }
    }
}

singleton class Methods {
    
    actions: {
        main: () -> Int = {
            val worker: SomeDummyInstantiableClass = SomeDummyInstantiableClass(5);
            worker.differenceShifted(5, 9) // 14
        }
    }
}
