project/test/semantics/unit/bad/Bad15_shouldThrowUninitializedErrorInWithValuesSection.ty
mutable class SomeMutableClass {

    values: {
        total: Int;
        goodAttribute: Void = Pass;
    }
    
    variables: {
        var1: Int = 1;
        var2: String = "S";
    }
    
    functions: {
        getValue: () -> Int = 50
        
        goodFunction: (param1: Int, param2: String, param3: Bool) -> Int = param1
        
        anotherGoodFunction: (param1: Int, param2: Int, param3: Int) -> Int = {
            this.var1
        } with values: {
            x: Int = 4;
            y: Int;
            z: Int = 5;
        }
    }
}

singleton class Main {
    
    actions: {
        main: () -> Void = Pass
    }
}
